feat:Add link to post

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="row">
             <div class="col-lg-3">
                 <aside class="d-none d-sm-block mt-3 "> <!--ASIDE IZQUIERDO-->
-                   <ul class="icon-list list-group">
+                    <ul class="icon-list list-group">
                         <li class="l-aside-btn list-group-item bg-body-tertiary"> <!--HOME-->
                             <a href="#">
                                 <span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 44 44" width="24"
@@ -515,7 +515,7 @@
                     </div>
                     <div class="img-card-aside card mt-4 mb-3">
                         <img src="https://res.cloudinary.com/practicaldev/image/fetch/s--0VA_opuX--/c_limit%2Cf_auto%2Cfl_progressive%2Cq_auto%2Cw_350/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/r958p7649efealx01xe6.png"
-                            class="p-3"alt="webassembly" width="100%" loading="lazy">
+                            class="p-3" alt="webassembly" width="100%" loading="lazy">
                         <div class="card-body">
                             <a class="fw-bold" href="#">Immerse yourself in the WebAssembly ecosystem ✅</a>
                         </div>
@@ -538,80 +538,85 @@
                         <a href="" class="btn2 btn btn-white">Latest</a>
                         <a href="" class="btn3 btn btn-white">Top</a>
                     </div>
-                    <div class="card img-txt mt-2 mb-2 rounded"> <!--CARD-1-->
-                        <div class="card-img">
-                            <img src="https://res.cloudinary.com/practicaldev/image/fetch/s--0YJjSZnv--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/oq1lv8jfdf929v783hyc.png"
-                                width="100%" style="background-color:#dddddd;"
-                                class="crayons-article__cover__image__feed"
-                                alt="Cover image for 10 GitHub repositories to advance your career as a Developer 📚">
-                        </div>
-                        <div class="card-txt">
-                            <div class="card-head d-flex ms-3 mt-3">
-                                <div class="prof-imgn">
-                                    <img src="https://res.cloudinary.com/practicaldev/image/fetch/s--FFw2hZyr--/c_fill,f_auto,fl_progressive,h_90,q_auto,w_90/https://dev-to-uploads.s3.amazonaws.com/uploads/user/profile_image/676134/54212bd4-07df-4510-a9f4-e78cd52194a5.jpg"
-                                        alt="iarchitsharma profile" class="prof-img rounded-circle" loading="lazy">
-                                </div>
-                                <div class="name-date ms-1">
-                                    <h5 class="name-font mb-1">Firstname Lastname</h5>
-                                    <h5 class="date-font">Jan 20</h5>
-                                </div>
+                    <a href="post.html">
+                        <div class="card img-txt mt-2 mb-2 rounded"> <!--CARD-1-->
+                            <div class="card-img">
+                                <img src="https://res.cloudinary.com/practicaldev/image/fetch/s--0YJjSZnv--/c_imagga_scale,f_auto,fl_progressive,h_420,q_auto,w_1000/https://dev-to-uploads.s3.amazonaws.com/uploads/articles/oq1lv8jfdf929v783hyc.png"
+                                    width="100%" style="background-color:#dddddd;"
+                                    class="crayons-article__cover__image__feed"
+                                    alt="Cover image for 10 GitHub repositories to advance your career as a Developer 📚">
                             </div>
-                            <div class="card-body ms-1 me-1">
-                                <a href="">
-                                    <h3 class="fw-bold">Lorem ipsum, dolor sit amet consectetur adipisicing..</h3>
-                                </a>
-                                <div class="hash d-flex">
-                                    <button type="button" class="hash1 btn btn-white me-2"><a
-                                            href="#">#lorem</a></button>
-                                    <button type="button" class="hash2 btn btn-white me-2"><a
-                                            href="#">#ipsum</a></button>
-                                    <button type="button" class="hash3 btn btn-white me-2"><a
-                                            href="#">#dolor</a></button>
-                                    <button type="button" class="hash4 btn btn-white me-2"><a href="#">#sit</a></button>
+                            <div class="card-txt">
+                                <div class="card-head d-flex ms-3 mt-3">
+                                    <div class="prof-imgn">
+                                        <img src="https://res.cloudinary.com/practicaldev/image/fetch/s--FFw2hZyr--/c_fill,f_auto,fl_progressive,h_90,q_auto,w_90/https://dev-to-uploads.s3.amazonaws.com/uploads/user/profile_image/676134/54212bd4-07df-4510-a9f4-e78cd52194a5.jpg"
+                                            alt="iarchitsharma profile" class="prof-img rounded-circle" loading="lazy">
+                                    </div>
+                                    <div class="name-date ms-1">
+                                        <h5 class="name-font mb-1">Firstname Lastname</h5>
+                                        <h5 class="date-font">Jan 20</h5>
+                                    </div>
+                                </div>
+                                <div class="card-body ms-1 me-1">
+                                    <a href="">
+                                        <h3 class="fw-bold">Lorem ipsum, dolor sit amet consectetur adipisicing..</h3>
+                                    </a>
+                                    <div class="hash d-flex">
+                                        <button type="button" class="hash1 btn btn-white me-2"><a
+                                                href="#">#lorem</a></button>
+                                        <button type="button" class="hash2 btn btn-white me-2"><a
+                                                href="#">#ipsum</a></button>
+                                        <button type="button" class="hash3 btn btn-white me-2"><a
+                                                href="#">#dolor</a></button>
+                                        <button type="button" class="hash4 btn btn-white me-2"><a
+                                                href="#">#sit</a></button>
 
-                                </div>
-                                <div class="icons d-flex row mt-1">
-                                    <div class="icons-l d-flex col-6">
-                                        <div class="like-icon d-flex me-4">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" role="img"
-                                                aria-labelledby="aae1znpzzf24di3hkgvsd8zsp6mudk6j" class="crayons-icon">
-                                                <title id="aae1znpzzf24di3hkgvsd8zsp6mudk6j">Reactions</title>
-                                                <path
-                                                    d="M18.884 12.595l.01.011L12 19.5l-6.894-6.894.01-.01A4.875 4.875 0 0112 5.73a4.875 4.875 0 016.884 6.865zM6.431 7.037a3.375 3.375 0 000 4.773L12 17.38l5.569-5.569a3.375 3.375 0 10-4.773-4.773L9.613 10.22l-1.06-1.062 2.371-2.372a3.375 3.375 0 00-4.492.25v.001z">
-                                                </path>
-                                            </svg>
-                                            <p>199</p>
-                                            <p class="d-none d-sm-block ms-1">reactions</p>
-                                        </div>
-                                        <div class="comment-icon d-flex">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" role="img"
-                                                aria-labelledby="alc3go8421s6forq0n8uac36q4uql3ut" class="crayons-icon">
-                                                <title id="alc3go8421s6forq0n8uac36q4uql3ut">Comments</title>
-                                                <path
-                                                    d="M10.5 5h3a6 6 0 110 12v2.625c-3.75-1.5-9-3.75-9-8.625a6 6 0 016-6zM12 15.5h1.5a4.501 4.501 0 001.722-8.657A4.5 4.5 0 0013.5 6.5h-3A4.5 4.5 0 006 11c0 2.707 1.846 4.475 6 6.36V15.5z">
-                                                </path>
-                                            </svg>
-                                            <p>21</p>
-                                            <p class="d-none d-sm-block ms-1">comments</p>
-                                        </div>
                                     </div>
-                                    <div class="icons-r d-flex justify-content-end col-6">
-                                        <div class="read-time">
-                                            <p class="date-font">10 min read</p>
+                                    <div class="icons d-flex row mt-1">
+                                        <div class="icons-l d-flex col-6">
+                                            <div class="like-icon d-flex me-4">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                    role="img" aria-labelledby="aae1znpzzf24di3hkgvsd8zsp6mudk6j"
+                                                    class="crayons-icon">
+                                                    <title id="aae1znpzzf24di3hkgvsd8zsp6mudk6j">Reactions</title>
+                                                    <path
+                                                        d="M18.884 12.595l.01.011L12 19.5l-6.894-6.894.01-.01A4.875 4.875 0 0112 5.73a4.875 4.875 0 016.884 6.865zM6.431 7.037a3.375 3.375 0 000 4.773L12 17.38l5.569-5.569a3.375 3.375 0 10-4.773-4.773L9.613 10.22l-1.06-1.062 2.371-2.372a3.375 3.375 0 00-4.492.25v.001z">
+                                                    </path>
+                                                </svg>
+                                                <p>199</p>
+                                                <p class="d-none d-sm-block ms-1">reactions</p>
+                                            </div>
+                                            <div class="comment-icon d-flex">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                    role="img" aria-labelledby="alc3go8421s6forq0n8uac36q4uql3ut"
+                                                    class="crayons-icon">
+                                                    <title id="alc3go8421s6forq0n8uac36q4uql3ut">Comments</title>
+                                                    <path
+                                                        d="M10.5 5h3a6 6 0 110 12v2.625c-3.75-1.5-9-3.75-9-8.625a6 6 0 016-6zM12 15.5h1.5a4.501 4.501 0 001.722-8.657A4.5 4.5 0 0013.5 6.5h-3A4.5 4.5 0 006 11c0 2.707 1.846 4.475 6 6.36V15.5z">
+                                                    </path>
+                                                </svg>
+                                                <p>21</p>
+                                                <p class="d-none d-sm-block ms-1">comments</p>
+                                            </div>
                                         </div>
-                                        <div class="save-bttn">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                                aria-hidden="true">
-                                                <path
-                                                    d="M6.75 4.5h10.5a.75.75 0 01.75.75v14.357a.375.375 0 01-.575.318L12 16.523l-5.426 3.401A.375.375 0 016 19.607V5.25a.75.75 0 01.75-.75zM16.5 6h-9v11.574l4.5-2.82 4.5 2.82V6z">
-                                                </path>
-                                            </svg>
+                                        <div class="icons-r d-flex justify-content-end col-6">
+                                            <div class="read-time">
+                                                <p class="date-font">10 min read</p>
+                                            </div>
+                                            <div class="save-bttn">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                                    aria-hidden="true">
+                                                    <path
+                                                        d="M6.75 4.5h10.5a.75.75 0 01.75.75v14.357a.375.375 0 01-.575.318L12 16.523l-5.426 3.401A.375.375 0 016 19.607V5.25a.75.75 0 01.75-.75zM16.5 6h-9v11.574l4.5-2.82 4.5 2.82V6z">
+                                                    </path>
+                                                </svg>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </a>
                     <div class="card-txt mb-2 border rounded bg-white"> <!--CARD-2-->
                         <div class="card-head d-flex ms-3 mt-3">
                             <div class="prof-imgn">
