--- a/post.html
+++ b/post.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="container">
+    <header class="container bg-white pt-1 pb-1">
         <nav class="row mt-2 mb-2"> <!--NAVBAR-->
             <div class="d-flex nav-left col-6">
                 <span class="d-block d-sm-none">
@@ -40,7 +40,7 @@
         </nav>
     </header>
 
-    <div class="container mt-3">
+    <div class="container bg-body-tertiary">
         <div class="row">
             <div class="col-lg-1">
                 <aside class="aside-left-post d-none d-lg-block"> <!--ASIDE IZQUIERDO-->
